--- a/public/style.css
+++ b/public/style.css
@@ -287,6 +287,37 @@ footer h3{
   gap: 1rem;
   
 }
+.sura-container li{
+  font-size: .8rem;
+}
 .sura-container::-webkit-scrollbar{
   width: 10px;
+}
+
+/* adding scrollbar for surah container */
+#surahs{
+  background-color: rgb(72, 62, 46);
+  color: rgb(248, 242, 242);
+  font-size: 1rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: .5rem;
+  border-radius: 10px;
+}
+#surahs:hover{
+  background-color: rgb(91, 67, 28);
+  color: rgb(245, 245, 4);
+  transition: 0.3s;
+}
+option {
+  background-color: rgb(72, 62, 46);
+  color: rgb(248, 242, 242);
+  font-size: 1rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: .5rem;
+  border-radius: 10px;
+}
+option:hover{
+  background-color: rgb(91, 67, 28);
+  color: rgb(245, 245, 4);
+  transition: 0.3s;
 }
